# fanuc_m20ia_tools

./: CMakeLists.txt  README.md  package.xml
meshes/tools/: GL1807608_TibiaFibula_L_Reflected_Block_ROSI.stl  GL1807608_TibiaFibula_L_Reflected_Block_ROSI_Tib_Ref.stl  GL1807608_TibiaFibula_L_Reflected_Block_ROSI_Tib_Ref_Trans.stl
urdf/: m20ia_tib_block_macro.xacro
urdf/tib_mount/: tib_tool_frame_macro.xacro
