<?xml version="1.0"?>
<package format="2">
  <name>fanuc_m20ia_tools</name>
  <version>0.0.1</version>
  <description>Package for simulator tools mounted on Fanuc m20ia manipulator.</description>

  <maintainer email="Jordylarrearodriguez@gmail.com">Jordy Larrea Rodriguez</maintainer>

  <license>CC0-1.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
